check_output_v18.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
error[E0432]: unresolved imports `windows::Win32::Devices::DeviceAndDriverInstallation::RegisterDeviceNotificationW`, `windows::Win32::Devices::DeviceAndDriverInstallation::UnregisterDeviceNotification`, `windows::Win32::Devices::DeviceAndDriverInstallation::HDEVNOTIFY`, `windows::Win32::Devices::DeviceAndDriverInstallation::REGISTER_NOTIFICATION_FLAGS`, `windows::Win32::Devices::DeviceAndDriverInstallation::DBT_DEVTYP_DEVICEINTERFACE`, `windows::Win32::Devices::DeviceAndDriverInstallation::DEV_BROADCAST_DEVICEINTERFACE_W`, `windows::Win32::Devices::DeviceAndDriverInstallation::DBT_DEVICEARRIVAL`, `windows::Win32::Devices::DeviceAndDriverInstallation::DBT_DEVICEREMOVECOMPLETE`
  --> crates\engine\src\hid\windows.rs:33:5
   |
33 |     RegisterDeviceNotificationW, UnregisterDeviceNotification, HDEVNOTIFY,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^ no `HDEVNOTIFY` in `Win32::Devices::DeviceAndDriverInstallation`
   |     |                            |
   |     |                            no `UnregisterDeviceNotification` in `Win32::Devices::DeviceAndDriverInstallation`
   |     no `RegisterDeviceNotificationW` in `Win32::Devices::DeviceAndDriverInstallation`
34 |     REGISTER_NOTIFICATION_FLAGS, DBT_DEVTYP_DEVICEINTERFACE, 
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^ no `DBT_DEVTYP_DEVICEINTERFACE` in `Win32::Devices::DeviceAndDriverInstallation`
   |     |
   |     no `REGISTER_NOTIFICATION_FLAGS` in `Win32::Devices::DeviceAndDriverInstallation`
35 |     DEV_BROADCAST_DEVICEINTERFACE_W, DBT_DEVICEARRIVAL, DBT_DEVICEREMOVECOMPLETE,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^ no `DBT_DEVICEREMOVECOMPLETE` in `Win32::Devices::DeviceAndDriverInstallation`
   |     |                                |
   |     |                                no `DBT_DEVICEARRIVAL` in `Win32::Devices::DeviceAndDriverInstallation`
   |     no `DEV_BROADCAST_DEVICEINTERFACE_W` in `Win32::Devices::DeviceAndDriverInstallation`
   |
help: a similar name exists in the module
   |
33 -     RegisterDeviceNotificationW, UnregisterDeviceNotification, HDEVNOTIFY,
33 +     RegisterDeviceNotificationW, CM_Unregister_Notification, HDEVNOTIFY,
   |

warning: unused import: `AvRevertMmThreadCharacteristics`
  --> crates\engine\src\hid\windows.rs:23:5
   |
23 |     AvRevertMmThreadCharacteristics, AvSetMmThreadCharacteristicsW,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `racing-wheel-engine` (lib) generated 1 warning
error: could not compile `racing-wheel-engine` (lib) due to 1 previous error; 1 warning emitted
